--- a/pages/templates/pages/content/discipline_detail.html
+++ b/pages/templates/pages/content/discipline_detail.html
@@ -6,9 +6,9 @@
 	<div id="content">
 		
 		<div class="discipline_description">
-			<h1>{{ object }} content:</h1>
+			<h1>{{ object }}:</h1>
 			{% if object.description %}
-				<p><i>{{ object.description|linebreaks }}</i></p>
+				{{ object.description|linebreaks }}
 			{% else %}<br><br>{% endif %}
 			{% if request.user.is_authenticated %}
 				<ul class="buttons_list">
@@ -51,7 +51,7 @@
 							{% endfor %}
 						{% endwith %}
 					{% else %}
-						<div class="page_content">{{ item.content|markdown|truncatewords:15 }}</div>
+						<div class="page_content">{{ item.content|markdown|truncatechars_html:400 }}</div>
 					{% endif %}
 					
 					{% if request.user.is_authenticated %}
@@ -79,6 +79,8 @@
 			<a class="undecorated" href="{% url 'pages:new_content' class_name=class_name key=object.pk %}"><img src="{% static 'images/icons/plus.png' %}">
 				<p><i>Add new content</i></p></li></a>
 		{% endwith %}
+	</div>
 	{% endif %}
+
 	
 {% endblock %}
