--- a/pages/templates/pages/content/discipline_detail.html
+++ b/pages/templates/pages/content/discipline_detail.html
@@ -27,7 +27,7 @@
 			<hr>
 		</div>
 		
-		{% for item in object_list %}
+		{% for item in sidebar_objects %}
 			<div id="discipline_content_plate">
 				{% with item|model_name as class %}
 					<h2>
