--- a/pages/templates/pages/content/disciplines_list.html
+++ b/pages/templates/pages/content/disciplines_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load pages_tags %}
 {% load static %}
 {% block title %}Main page{% endblock %}
 {% block content %}
@@ -18,12 +19,7 @@
 		</ul>
 		
 		{% if request.user.is_authenticated %}
-			<div id="add_new">
-				<a class="undecorated" href="{% url 'pages:discipline_create' %}">
-					<img src="{% static 'images/icons/plus.png' %}">
-					<p><i>Add new discipline</i></p>
-				</a>	
-			</div>
+			{% management_buttons 'new_discipline_big_plus' %}
 		{% endif %}
 	</div>
 	
