--- a/pages/templates/pages/content/theme_detail.html
+++ b/pages/templates/pages/content/theme_detail.html
@@ -23,7 +23,7 @@
 			<hr>
 		</div>
 		
-		{% for item in object_list %}
+		{% for item in sidebar_objects %}
 			<div id="discipline_content_plate">
 				{% with item|model_name as class %}
 					<h2><a href="{{ item.get_absolute_url }}">{{ item.title }}</a></h2>
