--- a/pages/templates/pages/content/theme_detail.html
+++ b/pages/templates/pages/content/theme_detail.html
@@ -11,67 +11,20 @@
 			{% else %}<br><br>
 			{% endif %}
 			{% if request.user.is_authenticated %}
-				<ul class="buttons_list">
-					<li><a class="undecorated" href="{% url 'pages:theme_edit' object.pk %}">
-						<img src="{% static 'images/icons/edit_button.png' %}">
-					</a></li>
-					<li><a class="undecorated" href="{% url 'pages:theme_delete' object.pk %}">
-						<img src="{% static 'images/icons/delete_button.png' %}">
-					</a></li>
-				</ul>
+				{% management_buttons 'content_edit' object %}
 			{% endif %}
 			<hr>
 		</div>
 		
 		{% for item in sidebar_objects %}
-			<div id="discipline_content_plate">
-				{% with item|model_name as class %}
-					<h2><a href="{{ item.get_absolute_url }}">{{ item.title }}</a></h2>
-					{% if class == 'theme' %}
-						<p class="description">{{ item.description|truncatewords:15 }}</p>
-						{% with item.pages.all as pages %}
-							<span class="subcontent_list">Pages:</span>
-							{% for page in pages %}
-								<i><a href="{{ page.get_absolute_url }}">{{ page.title }}</a></i>
-								{% if not forloop.last %},{% endif %}
-							{% endfor %}
-						{% endwith %}
-						<br>
-						{% with item.subthemes.all as subthemes %}
-							<span class="subcontent_list">Subthemes:</span>
-							{% for theme in subthemes %}
-								<i><a href="{{ theme.get_absolute_url }}">{{ theme.title }}</a></i>
-								{% if not forloop.last %},{% endif %}
-							{% endfor %}
-						{% endwith %}
-					{% else %}
-						<div class="page_content">{{ item.content|markdown|truncatechars_html:400 }}</div>
-					{% endif %}
-				
-					{% if request.user.is_authenticated %}
-						<ul class="buttons_list">
-							<li><a class="undecorated" href="{% if class == 'theme' %}{% url 'pages:theme_edit' item.pk %}
-								{% else %}{% url 'pages:page_edit' item.pk %}{% endif %}">
-								<img class="small" src="{% static 'images/icons/edit2.png' %}">
-							</a></li>
-							<li><a class="undecorated" href="{% if class == 'theme' %}{% url 'pages:theme_delete' item.pk %}
-								{% else %}{% url 'pages:page_delete' item.pk %}{% endif %}">
-								<img class="small" src="{% static 'images/icons/delete2.png' %}">
-							</a></li>
-						</ul>
-					{% endif %}
-				{% endwith %}
-			</div>
+			{% subitem_plate item request %}
 		{% empty %}
 			<p>No content yet.</p>
 		{% endfor %}
 	</div>
 	{% if request.user.is_authenticated %}
 	<div id="add_new">
-		{% with object|model_name as class_name %}
-			<a class="undecorated" href="{% url 'pages:new_content' class_name=class_name key=object.pk %}"><img src="{% static 'images/icons/plus.png' %}">
-				<p><i>Add new content</i></p></li></a>
-		{% endwith %}
+		{% management_buttons 'new_content' object %}
 	{% endif %}
 	</div>
 	
