--- a/pages/templates/pages/additional/search.html
+++ b/pages/templates/pages/additional/search.html
@@ -3,6 +3,7 @@
 		{{ form.search }}
 		{% csrf_token %}
 		{{ form.discipline }}
+		{{ form.obj_path }}
 		<input type="submit" value="Search!">
 		
 	</form>
