--- a/pages/templates/pages/additional/tag_buttons.html
+++ b/pages/templates/pages/additional/tag_buttons.html
@@ -234,7 +234,7 @@
 		if (alt_flag) {
 			if (event.code == "Enter") {
 				alt_flag = false;
-				make_it_pretty("<br>\n");
+				make_it_pretty("<br>");
 				}
 			if (event.code == "KeyB") {
 				alt_flag = false;
